testcases/invalid/semanticErr/sideeffect/sideEffectTypeErr02.wacc
# type mismatch: int <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  char c = 'c';
  c -= (4 + 5)
end